<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:alphabeticShortcut="n"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/add_profile"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:title="@string/add_profile_methods_scan_qr_code" />
            <item
                android:id="@+id/action_import_clipboard"
                android:title="@string/action_import" />
            <item
                android:id="@+id/action_import_file"
                android:title="@string/action_import_file" />
            <item android:title="@string/add_profile_methods_manual_settings">
                <menu>
                    <item
                        android:id="@+id/action_new_ss"
                        android:title="@string/action_shadowsocks" />
                    <item
                        android:id="@+id/action_new_trojan"
                        android:title="@string/action_trojan" />
                    <item
                        android:id="@+id/action_new_vmess"
                        android:title="@string/action_vmess" />
                    <item
                        android:id="@+id/action_new_vless"
                        android:title="@string/action_vless" />
                    <item
                        android:id="@+id/action_new_hysteria2"
                        android:title="@string/action_hysteria2" />
                    <item
                        android:id="@+id/action_new_anytls"
                        android:title="@string/action_anytls" />
                    <item
                        android:id="@+id/action_new_naive"
                        android:title="@string/action_naive" />
                    <item
                        android:id="@+id/action_new_mieru"
                        android:title="@string/action_mieru" />
                    <item
                        android:id="@+id/action_new_tuic5"
                        android:title="@string/action_tuic5" />
                    <item
                        android:id="@+id/action_new_juicity"
                        android:title="@string/action_juicity" />
                    <item
                        android:id="@+id/action_new_config"
                        android:title="@string/custom_config" />
                    <item
                        android:id="@+id/action_new_chain"
                        android:title="@string/proxy_chain" />
                    <item
                        android:id="@+id/action_new_balancer"
                        android:title="@string/balancer" />
                    <item
                        android:title="@string/more">
                        <menu>
                            <item
                                android:id="@+id/action_new_socks"
                                android:title="@string/action_socks" />
                            <item
                                android:id="@+id/action_new_http"
                                android:title="@string/action_http" />
                            <item
                                android:id="@+id/action_new_http3"
                                android:title="@string/action_http3" />
                            <item
                                android:id="@+id/action_new_trusttunnel"
                                android:title="TrustTunnel"
                                tools:ignore="HardcodedText" />
                            <item
                                android:id="@+id/action_new_ssh"
                                android:title="@string/action_ssh" />
                            <item
                                android:id="@+id/action_new_wg"
                                android:title="@string/action_wireguard" />
                            <item
                                android:id="@+id/action_new_shadowtls"
                                android:title="@string/action_shadowtls" />
                            <item
                                android:id="@+id/action_new_shadowquic"
                                android:title="@string/action_shadowquic" />
                            <item
                                android:id="@+id/action_new_ssr"
                                android:title="@string/action_shadowsocksr" />
                        </menu>
                    </item>
                </menu>
            </item>
            <item
                android:id="@+id/action_import_backup"
                android:visible="false"
                android:title="@string/backup">
                <menu>
                    <item
                        android:id="@+id/action_import_backup_clipboard"
                        android:title="@string/action_import" />
                    <item
                        android:id="@+id/action_import_backup_file"
                        android:title="@string/action_import_file" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/action_clear_traffic_statistics"
        android:title="@string/clear_traffic_statistics" />
    <item
        android:id="@+id/action_remove_duplicate"
        android:title="@string/deduplication" />
    <item
        android:id="@+id/action_connection_test"
        android:title="@string/connection_test">
        <menu>
            <item
                android:id="@+id/action_connection_url_test"
                android:title="@string/connection_test_url_test" />
            <item
                android:id="@+id/action_connection_test_clear_results"
                android:title="@string/connection_test_clear_results" />
            <item
                android:id="@+id/action_connection_test_delete_unavailable"
                android:title="@string/connection_test_delete_unavailable" />
        </menu>
    </item>
    <item
        android:id="@+id/action_update_subscription"
        android:title="@string/update_subscription" />
    <item
        android:id="@+id/action_order"
        android:title="@string/group_order">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_order_origin"
                    android:title="@string/group_order_origin" />
                <item
                    android:id="@+id/action_order_by_name"
                    android:title="@string/group_order_by_name" />
                <item
                    android:id="@+id/action_order_by_delay"
                    android:title="@string/group_order_by_delay" />
            </group>
        </menu>
    </item>

</menu>
