<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <io.nekohasekai.sagernet.widget.SimpleMenuPreference
        app:defaultValue="v2ray"
        app:entries="@array/config_type_entry"
        app:entryValues="@array/config_type_value"
        app:icon="@drawable/ic_baseline_nfc_24"
        app:key="serverProtocol"
        app:singleLineTitle="false"
        app:title="@string/config_type"
        app:useSimpleSummaryProvider="true" />

    <io.nekohasekai.sagernet.widget.EditConfigPreference
        app:icon="@drawable/ic_image_edit"
        app:key="serverConfig"
        app:title="@string/edit" />

    <EditTextPreference
        app:icon="@drawable/ic_hardware_router"
        app:key="serverAddress"
        app:title="@string/server_address"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>